deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks
  namespace: apps
spec:
  selector:
    matchLabels:
      app: owntracks
  template:
    metadata:
      labels:
        app: owntracks
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: owntracks
          image: ko://main.go
          args:
            [
              "--db-host",
              "$(DB_HOST)",
              "--db-user",
              "$(DB_USER)",
              "--db-password",
              "$(DB_PWD)",
              "--db-name",
              "$(DB_NAME)",
            ]
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owntracks
  namespace: apps
spec:
  defaultBackend:
    service:
      name: owntracks
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - owntracks
---
apiVersion: v1
kind: Service
metadata:
  name: owntracks
  namespace: apps
spec:
  selector:
    app: owntracks
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
